# django-multipart-upload

./: .gitignore  README.md  README.rst  pyproject.toml
.github/workflows/: build-and-release.yml
demo/: settings.py  urls.py
demo_app/: admin.py  forms.py  models.py  urls.py  views.py
demo_app/migrations/: 0001_initial.py  0002_mutipartfileupload_alter_fileupload_file.py
demo_app/templates/: base.html
demo_app/templates/demo_app/: fileupload_confirm_delete.html  fileupload_form.html  fileupload_list.html
django_multipart_upload/: fields.py  files.py  forms.py  serializers.py  settings.py  urls.py  views.py  widgets.py
django_multipart_upload/static/django-multipart-upload/: dropzone-min.js.map  dropzone.js  multipart-file-input.css  multipart-file-input.js
django_multipart_upload/templates/django_multipart_upload/: file_input.html  preview_template.html
