[project.optional-dependencies]
storages = ["django-storages", "boto3"]

[tool.poetry]
name = "django-multipart-upload"
description = "Multi-part uploads in django forms"
authors = ["Roldão Rego Jr. <roldaogjr@gmail.com>"]
version = "0.4.0"
license = "LGPL-3.0-or-later"
readme = "README.rst"
keywords = ["multipart", "upload", "widget"]
repository = "https://github.com/roldaojr/django-multipart-upload"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Framework :: Django",
  "Programming Language :: JavaScript",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = ">=3.10"
django = ">=4.1"
django-storages = { version = ">=1.10", optional = true }
boto3 = { version = ">=1.30", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
djlint = "^1.34.1"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
